# tide

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_PLAN.md  Makefile  README.md  game_engine_plan.md  vcpkg-configuration.json  vcpkg.json
.claude-octopus/: state.json  state.json.backup
.github/workflows/: ci.yml
cmake/: CompileShader.cmake  VerifyCookedArtifact.cmake  VerifyShaderArtifacts.cmake  tide_module.cmake
docs/adr/: 0000-template.md  0001-engine-name-and-namespace.md  0002-coordinate-system.md  0003-rhi-handle-strategy.md  0004-shader-pipeline.md  0005-memory-model.md  0006-bindless-vs-descriptor-sets.md  0007-threading-model.md  0008-package-manager.md  0009-window-platform-library.md  0010-reversed-z-depth.md  0011-jobs-system.md  0012-rhi-error-handling.md  0015-hot-reload-scope.md  0016-asset-guid-strategy.md  0017-runtime-binary-format.md  0018-asset-cooker.md  0037-input-action-map.md  0038-string-type.md  0039-error-policy.md  0040-networking-deferral.md  0041-cpp-hot-reload.md  0042-interface-abi-versioning.md  README.md
engine/assets/: CMakeLists.txt
engine/assets/include/tide/assets/: Asset.h  AssetDB.h  IAssetLoader.h  MeshAsset.h  MeshLoader.h  MmapFile.h  RuntimeFormat.h  ShaderAsset.h  ShaderLoader.h  TextureAsset.h  TextureLoader.h  Uuid.h  version.h
engine/assets/src/: Asset.cpp  AssetDB.cpp  IAssetLoader.cpp  MeshLoader.cpp  MmapFile.cpp  ShaderLoader.cpp  TextureLoader.cpp  Uuid.cpp
engine/audio/: CMakeLists.txt
engine/audio/include/tide/audio/: version.h
engine/core/: CMakeLists.txt
engine/core/include/tide/core/: Assert.h  Expected.h  Handle.h  Log.h  Math.h
engine/core/src/: Log.cpp
engine/gameplay/: CMakeLists.txt
engine/imgui-integration/: CMakeLists.txt
engine/imgui-integration/include/tide/imgui-integration/: Context.h
engine/imgui-integration/src/: Context.cpp
engine/input/: CMakeLists.txt
engine/input/include/tide/input/: Action.h  Actions.h  InputContext.h
engine/input/src/: InputSystem.cpp
engine/jobs/: CMakeLists.txt
engine/jobs/include/tide/jobs/: IJobSystem.h
engine/jobs/src/: ChaseLevDeque.h  InlineJobSystem.cpp  WorkStealingJobSystem.cpp  WorkStealingJobSystem.h
engine/physics/: CMakeLists.txt
engine/physics/include/tide/physics/: version.h
engine/platform/: CMakeLists.txt
engine/platform/include/tide/platform/: Path.h  Time.h  Window.h
engine/platform/src/: Path.cpp  Window.cpp
engine/renderer/: CMakeLists.txt
engine/rhi/: CMakeLists.txt
engine/rhi-metal/: CMakeLists.txt
engine/rhi-metal/include/tide/rhi-metal/: MetalDevice.h
engine/rhi-metal/src/: CaptureManager.mm  MetalCommandBuffer.h  MetalCommandBuffer.mm  MetalDevice.h  MetalDevice.mm  MetalSwapchain.h  MetalSwapchain.mm
engine/rhi/include/tide/rhi/: Descriptors.h  Handles.h  IDevice.h  version.h
engine/rhi/src/: IDevice.cpp
engine/scene/: CMakeLists.txt
engine/scripting/: CMakeLists.txt
engine/shaders/: PerFrame.h  compute_canary.cs.hlsl  compute_uav_tex.cs.hlsl  imgui.ps.hlsl  imgui.vs.hlsl  textured_quad.ps.hlsl  textured_quad.vs.hlsl  triangle.ps.hlsl  triangle.ps.metal  triangle.vs.hlsl  triangle.vs.metal
samples/: CMakeLists.txt
samples/00_window/: CMakeLists.txt  main.cpp
samples/01_clear/: CMakeLists.txt  main.cpp
samples/02_triangle/: CMakeLists.txt  main.cpp
samples/03_textured_quad/: CMakeLists.txt  main.cpp
samples/04_imgui_overlay/: CMakeLists.txt  main.cpp
samples/05_offscreen_hash/: CMakeLists.txt  main.cpp
samples/06_compute_dispatch/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/fixtures/cooker/: floor.gltf  triangle.gltf
tests/unit/assets/: test_asset_db.cpp  test_asset_db_async.cpp  test_mesh_runtime.cpp.in  test_mmap_file.cpp  test_shader_loader.cpp  test_texture_loader.cpp  test_uuid.cpp
tests/unit/core/: test_handle.cpp
tests/unit/input/: test_action_compile_time.cpp
tests/unit/jobs/: test_inline_jobs.cpp  test_work_stealing.cpp
tools/: tsan-suppressions.txt
tools/asset-cooker/: CMakeLists.txt
tools/asset-cooker/include/tide/cooker/: Version.h
tools/asset-cooker/src/: Args.cpp  Args.h  MeshCooker.cpp  MeshCooker.h  MetaFile.cpp  MetaFile.h  ShaderCooker.cpp  ShaderCooker.h  TextureCooker.cpp  TextureCooker.h  main.cpp
tools/lint/: check-threading-invariants.sh
